@@ -2149,16 +2149,31 @@ operator|!=
 literal|null
 condition|)
 block|{
-specifier|final
-name|long
-name|newSegmentSize
+name|SegmentInfo
+name|si
 init|=
-name|segmentSize
+operator|new
+name|SegmentInfo
 argument_list|(
 name|flushState
 operator|.
 name|segmentName
+argument_list|,
+name|flushState
+operator|.
+name|numDocs
+argument_list|,
+name|directory
 argument_list|)
+decl_stmt|;
+specifier|final
+name|long
+name|newSegmentSize
+init|=
+name|si
+operator|.
+name|sizeInBytes
+argument_list|()
 decl_stmt|;
 name|String
 name|message
@@ -4564,94 +4579,6 @@ operator|.
 name|getInstance
 argument_list|()
 decl_stmt|;
-comment|// TODO FI: this is not flexible -- we can't hardwire
-comment|// extensions in here:
-DECL|method|segmentSize
-specifier|private
-name|long
-name|segmentSize
-parameter_list|(
-name|String
-name|segmentName
-parameter_list|)
-throws|throws
-name|IOException
-block|{
-comment|// Used only when infoStream != null
-assert|assert
-name|infoStream
-operator|!=
-literal|null
-assert|;
-name|long
-name|size
-init|=
-name|directory
-operator|.
-name|fileLength
-argument_list|(
-name|segmentName
-operator|+
-literal|".tii"
-argument_list|)
-operator|+
-name|directory
-operator|.
-name|fileLength
-argument_list|(
-name|segmentName
-operator|+
-literal|".tis"
-argument_list|)
-operator|+
-name|directory
-operator|.
-name|fileLength
-argument_list|(
-name|segmentName
-operator|+
-literal|".frq"
-argument_list|)
-operator|+
-name|directory
-operator|.
-name|fileLength
-argument_list|(
-name|segmentName
-operator|+
-literal|".prx"
-argument_list|)
-decl_stmt|;
-specifier|final
-name|String
-name|normFileName
-init|=
-name|segmentName
-operator|+
-literal|".nrm"
-decl_stmt|;
-if|if
-condition|(
-name|directory
-operator|.
-name|fileExists
-argument_list|(
-name|normFileName
-argument_list|)
-condition|)
-name|size
-operator|+=
-name|directory
-operator|.
-name|fileLength
-argument_list|(
-name|normFileName
-argument_list|)
-expr_stmt|;
-return|return
-name|size
-return|;
-block|}
 comment|// Coarse estimates used to measure RAM usage of buffered deletes
 DECL|field|OBJECT_HEADER_BYTES
 specifier|final
