@@ -29257,6 +29257,94 @@ name|close
 argument_list|()
 expr_stmt|;
 block|}
+DECL|method|testNoDocsIndex
+specifier|public
+name|void
+name|testNoDocsIndex
+parameter_list|()
+throws|throws
+name|Throwable
+block|{
+name|Directory
+name|dir
+init|=
+operator|new
+name|MockRAMDirectory
+argument_list|()
+decl_stmt|;
+name|IndexWriter
+name|writer
+init|=
+operator|new
+name|IndexWriter
+argument_list|(
+name|dir
+argument_list|,
+operator|new
+name|SimpleAnalyzer
+argument_list|()
+argument_list|,
+name|IndexWriter
+operator|.
+name|MaxFieldLength
+operator|.
+name|UNLIMITED
+argument_list|)
+decl_stmt|;
+name|writer
+operator|.
+name|setUseCompoundFile
+argument_list|(
+literal|false
+argument_list|)
+expr_stmt|;
+name|ByteArrayOutputStream
+name|bos
+init|=
+operator|new
+name|ByteArrayOutputStream
+argument_list|(
+literal|1024
+argument_list|)
+decl_stmt|;
+name|writer
+operator|.
+name|setInfoStream
+argument_list|(
+operator|new
+name|PrintStream
+argument_list|(
+name|bos
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|writer
+operator|.
+name|addDocument
+argument_list|(
+operator|new
+name|Document
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|writer
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
+name|_TestUtil
+operator|.
+name|checkIndex
+argument_list|(
+name|dir
+argument_list|)
+expr_stmt|;
+name|dir
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
+block|}
 block|}
 end_class
 end_unit
